<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/flTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/lexend_regular"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@color/colorGrayCod"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/snTakePictureTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/snTakePictureTitle" />

        <Spinner
            android:id="@+id/snTakePictureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lexend_medium"
            android:gravity="end"
            android:textColor="@color/colorGrayCod"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/lexend_regular"
            android:padding="5dp"
            android:text="@string/continue_text"
            android:textColor="@color/colorRed"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/snTakePictureTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/snTakePictureTitle" />
    </FrameLayout>

    <com.vanthien113.tiancamera.utils.imagezoom.ImageViewTouch
        android:id="@+id/ivZoomable"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        app:layout_constraintTop_toBottomOf="@+id/flTopBar" />

    <ImageView
        android:id="@+id/ivMultiSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_multi_select_white"
        app:layout_constraintBottom_toBottomOf="@+id/ivZoomable"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivZoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_zoom_white"
        app:layout_constraintBottom_toBottomOf="@+id/ivZoomable"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMedias"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivZoomable" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/lexend_semibold"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/collection"
            android:textColor="@color/colorGrayCod"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvTakeImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/lexend_regular"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/take_photo"
            android:textColor="@color/colorSilver"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvRecordVideo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/lexend_regular"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/video"
            android:textColor="@color/colorSilver"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>