<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/bg_gradient_revert"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvTakePictureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/video"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/bg_gradient"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/ivFlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="5dp"
        android:src="@drawable/ic_flash_white"
        app:layout_constraintBottom_toBottomOf="@id/ivRecordVideo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivRecordVideo" />

    <TextView
        android:id="@+id/tvCollectionMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/lexend_regular"
        android:paddingBottom="10dp"
        android:text="@string/collection"
        android:textColor="@color/colorSilver"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/ivFlash"
        app:layout_constraintStart_toStartOf="@+id/ivFlash"
        app:layout_constraintTop_toTopOf="@+id/tvFeatureTakePicture" />

    <ImageView
        android:id="@+id/ivRecordVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_record_video"
        app:layout_constraintBottom_toTopOf="@id/tvFeatureTakePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivRotateCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="11dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="5dp"
        android:src="@drawable/ic_rotate_camera"
        app:layout_constraintBottom_toTopOf="@id/tvFeatureTakePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivRecordVideo" />

    <TextView
        android:id="@+id/tvFeatureTakePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/lexend_semibold"
        android:paddingBottom="10dp"
        android:text="@string/video"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTakePictureMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/lexend_regular"
        android:paddingBottom="10dp"
        android:text="@string/take_photo"
        android:textColor="@color/colorSilver"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/ivRotateCamera"
        app:layout_constraintStart_toStartOf="@+id/ivRotateCamera"
        app:layout_constraintTop_toTopOf="@+id/tvFeatureTakePicture" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRecordTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/colorRed"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCountDownTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/lexend_medium"
            android:includeFontPadding="false"
            android:text="00:00:00"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>